--- a/data/tabular/choline_transporter_butkiewicz/meta.yaml
+++ b/data/tabular/choline_transporter_butkiewicz/meta.yaml
@@ -1,173 +1,117 @@
-name: choline_transporter_butkiewicz
+name: bicerano_dataset
 description: |-
-  This dataset was originally curated from HTS data at
-  the PubChem database. The primary screen AID 488975 identified
-  inhibitors of CHT. The counter screen AID 493221 was used as a
-  validation screen to confirm the active compounds that inhibit CHT.
-  AID504840 and AID588401 experiments were used as additional validation
-  experiments. The screen AID 493222 evaluated remaining active compounds
-  for non-specific activity in parental HEK293 cells. AID602208 tested a
-  selected set of compounds for 3H choline uptake. The final set of 254
-  active compounds was determined by the overlap of active compounds in
-  screens AID 493221, AID504840, and AID588401 subtracting any
-  non-specific hits from AID 49322 and all inactive compounds in the
-  re-confirmation screen AID602208.
+  This paper outlines a MD simulation workflow based on GPU MD simulation and the
+  refined optimized potentials for liquid simulation (OPLS) OPLS3e force field to
+  calculate glass transition temperatures (Tgs) of 315 polymers for which Bicerano
+  reported experimental values.
 targets:
-  - id: activity_choline_transporter
-    description: inhibition of choline transporter receptor (1) or not (0).
-    units:
-    type: boolean
+  - id: Tg_exp
+    description: experimental glass transition temperature
+    units: K
+    type: float
     names:
-      - noun: inhibition of choline transporter activity
-      - adjective: choline transporter activity inhibition
-      - gerund: inhibiting the choline transporter activity
-      - verb: inhibits choline transporter activity
-    pubchem_aids:
-      - 488975
-      - 493221
-      - 504840
-      - 588401
-      - 493222
-      - 602208
-benchmarks:
-  - name: TDC
-    link: https://tdcommons.ai/
-    split_column: split
+      - noun: experimental glass transition temperature
+    uris:
+  - id: Tg_calc
+    description: calculated glass transition temperature
+    units: K
+    type: float
+    names:
+      - noun: MD-computed glass transition temperature (OPLS3e force field)
+      - noun: computed glass transition temperature (using MD with OPLS3e force field)
+  - id: rho_300K_calc
+    description: computed density at 300K
+    units: g/cm^3
+    type: float
+    names:
+      - noun: computed polymer density at 300K (using MD with OPLS3e force field)
+      - noun: computed density at 300K (using MD with OPLS3e force field)
 identifiers:
-  - id: SMILES
-    type: SMILES
-    description: SMILES
+  - id: PSMILES
+    type: PSMILES
+    description: PSMILES
+  - id: compound_name
+    type: Other
+    names:
+      - noun: compound name
+    description: polymer name
 license: CC BY 4.0
 links:
-  - url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
-    description: original dataset
-  - url: https://doi.org/10.3390/molecules18010735
+  - url: https://pubs.acs.org/doi/10.1021/acsapm.0c00524#
     description: corresponding publication
-  - url: https://doi.org/10.1093/nar/gky1033
-    description: corresponding publication
-  - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
-    description: corresponding publication
-num_points: 302306
+  - url:
+      - https://raw.githubusercontent.com/AdrianM0/chemnlp/main/data/tabular/bicerano_dataset/HT_MD_polymer_properties.csv
+    description: data source
+num_points: 315
 bibtex:
   - |-
-    @article{Butkiewicz2013,
-    doi = {10.3390/molecules18010735},
-    url = {https://doi.org/10.3390/molecules18010735},
-    year = {2013},
-    month = jan,
-    publisher = {{MDPI} {AG}},
-    volume = {18},
-    number = {1},
-    pages = {735--756},
-    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and
-    Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens
-    Meiler},
-    title = {Benchmarking Ligand-Based Virtual High-Throughput
-    Screening with the {PubChem} Database},
-    journal = {Molecules}}
-  - |-
-    @article{Kim2018,
-    doi = {10.1093/nar/gky1033},
-    url = {https://doi.org/10.1093/nar/gky1033},
-    year = {2018},
-    month = oct,
-    publisher = {Oxford University Press ({OUP})},
-    volume = {47},
-    number = {D1},
-    pages = {D1102--D1109},
-    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and
-    Asta Gindulyte and Jia He and Siqian He and Qingliang Li and
-    Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid
-    Zaslavsky and Jian Zhang and Evan E Bolton},
-    title = {{PubChem} 2019 update: improved access to chemical data},
-    journal = {Nucleic Acids Research}}
-  - |-
-    @article{Butkiewicz2017,
-    doi = {},
-    url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/},
-    year = {2017},
-    publisher = {Chem Inform},
+    @article{afzal2021,
+    author = {Afzal, Mohammad Atif Faiz and Browning, Andrea R. and Goldberg, Alexander and Halls, Mathew D. and Gavartin, Jacob L. and Morisato,
+    Tsuguo and Hughes, Thomas F. and Giesen, David J. and Goose, Joseph E.},
+    title = {High-Throughput Molecular Dynamics Simulations and Validation of Thermophysical Properties of Polymers for Various Applications},
+    journal = {ACS Applied Polymer Materials},
     volume = {3},
-    number = {1},
-    author = {Butkiewicz, M. and Wang, Y. and Bryant, S. H. and Lowe,
-    E. W. and Weaver, D. C. and Meiler, J.},
-    title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from
-    the {P}ub{C}hem {D}atabase}},
-    journal = {Chemical Science}}
+    number = {2},
+    pages = {620-630},
+    year = {2021},
+    doi = {10.1021/acsapm.0c00524}}
 templates:
-  - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {activity_choline_transporter#no &NULL}{activity_choline_transporter__names__noun}.
-  - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule {#shows|exhibits|displays!} {activity_choline_transporter#no &NULL}{activity_choline_transporter__names__noun}.
-  - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that {#shows|exhibits|displays!} {activity_choline_transporter#no &NULL}{activity_choline_transporter__names__noun}.
-  - The {#molecule |!}{SMILES__description} {SMILES#} is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}.
+  - The polymer with the {PSMILES__description} of {PSMILES#} has an  {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units}.
+  - The polymer with the {PSMILES__description} of {PSMILES#} has a  {Tg_calc__names__noun}  of {Tg_calc#} {Tg_exp__units}.
+  - The polymer with the {PSMILES__description} of {PSMILES#} has a {rho_300K_calc__names__noun} of {rho_300K_calc#} {rho_300K_calc__units}.
+  - The polymer with the {compound_name__names__noun} of {compound_name#} has an {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units}.
+  - The polymer with the {compound_name__names__noun} of {compound_name#} has a {Tg_calc__names__noun} of {Tg_calc#} {Tg_calc__units}.
+  - The polymer with the {compound_name__names__noun} of {compound_name#} has a {rho_300K_calc__names__noun} of {rho_300K_calc#} {rho_300K_calc__units}.
+  - What is the {Tg_exp__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI> {Tg_exp#} {Tg_exp__units}.
+  - What is the {Tg_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI> {Tg_calc#} {Tg_calc__units}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI> {rho_300K_calc#} {rho_300K_calc__units}.
+  - What is the {Tg_exp__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI> {Tg_exp#} {Tg_exp__units}.
+  - What is the {Tg_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI> {Tg_calc#} {Tg_calc__units}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI> {rho_300K_calc#} {rho_300K_calc__units}.
+  - The polymer with the {PSMILES__description} {PSMILES#} has an {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units} and a {Tg_calc__names__noun} of {Tg_calc#} {Tg_calc__units}.
+  - The polymer with the {compound_name__names__noun} {compound_name#} has an {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units} and a {Tg_calc__names__noun} of {Tg_calc#} {Tg_calc__units}.
+  - Compare the {Tg_exp__names__noun} and {Tg_calc__names__noun} for the polymer with the {PSMILES__description} {PSMILES#}. Answer:<EOI> {Tg_exp#} {Tg_exp__units}, {Tg_calc#} {Tg_calc__units}.
+  - Compare the {Tg_exp__names__noun} and {Tg_calc__names__noun} for the polymer with the {compound_name__names__noun} {compound_name#}. Answer:<EOI> {Tg_exp#} {Tg_exp__units}, {Tg_calc#} {Tg_calc__units}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#} at 300K? Answer:<EOI> {rho_300K_calc#} {rho_300K_calc__units}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#} at 300K? Answer:<EOI> {rho_300K_calc#} {rho_300K_calc__units}.
+  - What is the {Tg_exp__names__noun} of the polymer with the {PSMILES__description} {PSMILES#} in Kelvin? Answer:<EOI> {Tg_exp#}.
+  - What is the {Tg_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#} in Kelvin? Answer:<EOI> {Tg_calc#}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#} in g/cm^3? Answer:<EOI> {rho_300K_calc#}.
+  - What is the {Tg_exp__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#} in Kelvin? Answer:<EOI> {Tg_exp#}.
+  - What is the {Tg_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#} in Kelvin? Answer:<EOI> {Tg_calc#}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#} in g/cm^3? Answer:<EOI> {rho_300K_calc#}.
+  - The polymer with the {PSMILES__description} {PSMILES#} has an {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units} and a {rho_300K_calc__names__noun} of {rho_300K_calc#} {rho_300K_calc__units}.
+  - The polymer with the {compound_name__names__noun} {compound_name#} has an {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units} and a {rho_300K_calc__names__noun} of {rho_300K_calc#} {rho_300K_calc__units}.
+  - Compare the {Tg_exp__names__noun} and {rho_300K_calc__names__noun} for the polymer with the {PSMILES__description} {PSMILES#}. Answer:<EOI> {Tg_exp#} {Tg_exp__units}, {rho_300K_calc#} {rho_300K_calc__units}.
+  - Compare the {Tg_exp__names__noun} and {rho_300K_calc__names__noun} for the polymer with the {compound_name__names__noun} {compound_name#}. Answer:<EOI> {Tg_exp#} {Tg_exp__units}, {rho_300K_calc#} {rho_300K_calc__units}.
   - |-
-    Task: Please classify a molecule based on the description.
-    Description: A molecule that is {activity_choline_transporter__names__gerund}.
-    {#Molecule |!}{SMILES__description}: {SMILES#}
-    Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
-    Result: {activity_choline_transporter#False&True}
-  - |-
-    Task: Please classify a molecule based on the description.
-    Description: A molecule that is {activity_choline_transporter__names__gerund}.
-    {#Molecule |!}{SMILES__description}: {SMILES#}
-    Constraint: Answer the question in a {#full|complete!} sentence.
-    Result: This molecule is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}.
-  - |-
-    Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
-    Description: A molecule that is {activity_choline_transporter__names__gerund}.
-    Result: {SMILES#}
-  - |-
-    User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {activity_choline_transporter__names__gerund}?
-    Assistant: {activity_choline_transporter#No&Yes}, this molecule is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}.
-  - |-
-    User: Is the molecule with the {SMILES__description} {SMILES#} {activity_choline_transporter__names__gerund}?
-    Assistant: {activity_choline_transporter#No&Yes}, it is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}.
-  - |-
-    User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}?
-    Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
-  - |-
-    User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}?
-    Assistant: This is a molecule that is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}: {SMILES#}
-  - |-
-    User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
-    Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
-    User: Yes, please. The molecule should {activity_choline_transporter#not &NULL}be {activity_choline_transporter__names__gerund}.
-    Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}: {SMILES#}
-  - |-
-    User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
-    Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
-    User: Yes, the molecule should {activity_choline_transporter#not &NULL}be {activity_choline_transporter__names__gerund}.
-    Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}: {SMILES#}
-  - Is the {SMILES__description} {SMILES#} {activity_choline_transporter__names__gerund}:<EOI>{activity_choline_transporter#no&yes}
-  - |-
-    Task: Please classify a molecule based on the description.
-    Description: A molecule that is {activity_choline_transporter__names__gerund}.
-    {#Molecule |!}{SMILES__description}: {SMILES#}
-    Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
-    Result:<EOI>{activity_choline_transporter#False&True}
-  - |-
-    Task: Please classify a molecule based on the description.
-    Description: A molecule that is {activity_choline_transporter__names__gerund}.
-    {#Molecule |!}{SMILES__description}: {SMILES#}
-    Constraint: Answer the question in a {#full|complete!} sentence.
-    Result:<EOI>This molecule is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}.
-  - |-
-    Task: Please answer the multiple choice question.
-    Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {activity_choline_transporter__names__gerund}?
-    Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+    Question: What is the {Tg_exp__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}?
+    Constraint: You must pick either {%multiple_choice_enum%3%aA1} without using any other words.
     Options:
-    {activity_choline_transporter%}
-    Answer:<EOI>{%multiple_choice_result}
-  - |-
-    Task: Please answer the multiple choice question.
-    Question: Which molecules are {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}?
-    Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+    {Tg_exp%}
+    Answer:<EOI> {%multiple_choice_result}
+  - Question: What is the {Tg_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}?
+    Constraint: You must pick either {%multiple_choice_enum%3%aA1} without using any other words.
     Options:
-    {SMILES%activity_choline_transporter%}
-    Answer: {%multiple_choice_result}
-  - |-
-    Task: Please answer the multiple choice question.
-    Question: Which molecules are {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}?
-    Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+    {Tg_calc%}
+    Answer:<EOI> {%multiple_choice_result}
+  - Question: What is the {rho_300K_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}?
+    Constraint: You must pick either {%multiple_choice_enum%3%aA1} without using any other words.
     Options:
-    {SMILES%activity_choline_transporter%}
-    Answer:<EOI>{%multiple_choice_result}
+    {rho_300K_calc%}
+    Answer:<EOI> {%multiple_choice_result}
+  - Question: What is the {Tg_exp__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}?
+    Constraint: You must pick either {%multiple_choice_enum%3%aA1} without using any other words.
+    Options:
+    {Tg_exp%}
+    Answer:<EOI> {%multiple_choice_result}
+  - Question: What is the {Tg_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}?
+    Constraint: You must pick either {%multiple_choice_enum%3%aA1} without using any other words.
+    Options:
+    {Tg_calc%}
+    Answer:<EOI> {%multiple_choice_result}
+  - Question: What is the {rho_300K_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}?
+    Constraint: You must pick either {%multiple_choice_enum%3%aA1} without using any other words.
+    Options:
+    {rho_300K_calc%}
+    Answer:<EOI> {%multiple_choice_result}
