--- a/data/tabular/bc5disease/meta.yaml
+++ b/data/tabular/bc5disease/meta.yaml
@@ -52,3 +52,21 @@ templates:
     User: Does the following text contain mentions of diseases?{# Can you return matches?| Can you output matches?|Please return matches!}
     {#Text: |!}{sentence#}
     Assistant: {#I found|There is!} {matched_words#}.
+  - |-
+    Task: {#Extract|Identify!} the disease mentions in the given {sentence__names__noun}. List the {target__names__noun} found. If there is no {#match|mention of a disease|matching entity!}, return `no match`.
+
+    {#Sentence: |Text: |!}{sentence#}
+
+    Answer: {matched_words#}
+  - |-
+    Task: {#Extract|Identify!} the {target__names__noun} from the {sentence__names__noun} below. If there is no {#match|mention of a disease|matching entity!}, return `no match`.
+
+    {#Sentence: |Text: |!}{sentence#}
+
+    Answer:<EOI>{matched_words#}
+  - |-
+    Task: {#Please identify|Identify!} the {target__names__noun} in the {sentence__names__noun} provided. If there is no {#match|mention of a disease|matching entity!}, return `no match`.
+
+    {#Sentence: |Text: |!}{sentence#}
+
+    Answer:<EOI>{matched_words#}
