--- a/data/tabular/MUV_846/meta.yaml
+++ b/data/tabular/MUV_846/meta.yaml
@@ -31,3 +31,19 @@ bibtex:
     URL = {https://doi.org/10.1021/ci8002649}}
 templates:
   - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {MUV-846#not &NULL}{MUV-846__names__noun}.
+  - |-
+    Question: Is the {SMILES__description} {SMILES#} {MUV-846__names__noun}?
+
+    Answer:<EOI>{MUV-846#no&yes}
+  - |-
+    Task: Please {#determine|predict|estimate!} if the {#molecule|compound!} with the {SMILES__description} {SMILES#} is {MUV-846__names__noun}.
+
+    Result:<EOI>{MUV-846#no&yes}
+  - |-
+    Task: Please {#create|generate!} a {#molecule|compound!} that is {MUV-846#not &NULL}{MUV-846__names__noun} and report its {SMILES__description}.
+
+    Result:<EOI>{SMILES#}
+  - |-
+    {#Create|Generate|Propose|Suggest|Design|Invent!} a {#molecule|compound!} that is {MUV-846#not &NULL}{MUV-846__names__noun} and report its {SMILES__description}.
+
+    Result: {SMILES#}
