--- a/data/tabular/bicerano_dataset/meta.yaml
+++ b/data/tabular/bicerano_dataset/meta.yaml
@@ -1,6 +1,19 @@
 bibtex:
-  - "@article{afzal2021, author = {Afzal, Mohammad Atif Faiz and Browning, Andrea R. and Goldberg, Alexander and Halls, Mathew D. and Gavartin, Jacob L. and Morisato, Tsuguo and Hughes, Thomas F. and Giesen, David J. and Goose, Joseph E.}, title = {High-Throughput Molecular Dynamics Simulations and Validation of Thermophysical Properties of Polymers for Various Applications}, journal = {ACS Applied Polymer Materials}, volume = {3}, number = {2}, pages = {620-630}, year = {2021}, doi = {10.1021/acsapm.0c00524}}"
-description: "This paper outlines a MD simulation workflow based on GPU MD simulation and the refined optimized potentials for liquid simulation (OPLS) OPLS3e force field to calculate glass transition temperatures (Tgs) of 315 polymers for which Bicerano reported experimental values."
+  - "@article{afzal2021,
+    author = {Afzal, Mohammad Atif Faiz and Browning, Andrea R. and Goldberg, Alexander
+    and Halls, Mathew D. and Gavartin, Jacob L. and Morisato,
+    Tsuguo and Hughes, Thomas F. and Giesen, David J. and Goose, Joseph E.},
+    title = {High-Throughput Molecular Dynamics Simulations and Validation of Thermophysical
+    Properties of Polymers for Various Applications},
+    journal = {ACS Applied Polymer Materials},
+    volume = {3},
+    number = {2},
+    pages = {620-630},
+    year = {2021},
+    doi = {10.1021/acsapm.0c00524}}"
+description:
+  "This paper outlines a MD simulation workflow based on GPU MD simulation
+  and the refined optimized potentials for liquid simulation (OPLS) OPLS3e force field to calculate glass transition temperatures (Tgs) of 315 polymers for which Bicerano reported experimental values."
 identifiers:
   - description: PSMILES
     id: PSMILES
@@ -8,7 +21,7 @@ identifiers:
   - description: polymer name
     id: compound_name
     names:
-      - noun: comxpound name
+      - noun: compound name
     type: Other
 license: CC BY 4.0
 links:
@@ -24,7 +37,7 @@ targets:
     id: Tg_exp
     names:
       - noun: experimental glass transition temperature
-    type: float
+    type: continuous
     units: K
     uris: null
   - description: calculated glass transition temperature
@@ -32,14 +45,14 @@ targets:
     names:
       - noun: MD-computed glass transition temperature (OPLS3e force field)
       - noun: computed glass transition temperature (using MD with OPLS3e force field)
-    type: float
+    type: continuous
     units: K
   - description: computed density at 300K
     id: rho_300K_calc
     names:
       - noun: computed polymer density at 300K (using MD with OPLS3e force field)
       - noun: computed density at 300K (using MD with OPLS3e force field)
-    type: float
+    type: continuous
     units: g/cm^3
 templates:
   - The polymer with the {PSMILES__description} of {PSMILES#} has an  {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units}.
@@ -48,18 +61,18 @@ templates:
   - The polymer with the {compound_name__names__noun} of {compound_name#} has an {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units}.
   - The polymer with the {compound_name__names__noun} of {compound_name#} has a {Tg_calc__names__noun} of {Tg_calc#} {Tg_calc__units}.
   - The polymer with the {compound_name__names__noun} of {compound_name#} has a {rho_300K_calc__names__noun} of {rho_300K_calc#} {rho_300K_calc__units}.
-  - What is the {Tg_exp__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI> {Tg_exp#} {Tg_exp__units}.
-  - What is the {Tg_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI> {Tg_calc#} {Tg_calc__units}.
-  - What is the {rho_300K_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI> {rho_300K_calc#} {rho_300K_calc__units}.
-  - What is the {Tg_exp__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI> {Tg_exp#} {Tg_exp__units}.
-  - What is the {Tg_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI> {Tg_calc#} {Tg_calc__units}.
-  - What is the {rho_300K_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI> {rho_300K_calc#} {rho_300K_calc__units}.
+  - What is the {Tg_exp__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI>{Tg_exp#} {Tg_exp__units}.
+  - What is the {Tg_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI>{Tg_calc#} {Tg_calc__units}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#}? Answer:<EOI>{rho_300K_calc#} {rho_300K_calc__units}.
+  - What is the {Tg_exp__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI>{Tg_exp#} {Tg_exp__units}.
+  - What is the {Tg_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI>{Tg_calc#} {Tg_calc__units}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#}? Answer:<EOI>{rho_300K_calc#} {rho_300K_calc__units}.
   - The polymer with the {PSMILES__description} {PSMILES#} has an {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units} and a {Tg_calc__names__noun} of {Tg_calc#} {Tg_calc__units}.
   - The polymer with the {compound_name__names__noun} {compound_name#} has an {Tg_exp__names__noun} of {Tg_exp#} {Tg_exp__units} and a {Tg_calc__names__noun} of {Tg_calc#} {Tg_calc__units}.
-  - Compare the {Tg_exp__names__noun} and {Tg_calc__names__noun} for the polymer with the {PSMILES__description} {PSMILES#}. Answer:<EOI> {Tg_exp#} {Tg_exp__units}, {Tg_calc#} {Tg_calc__units}.
-  - Compare the {Tg_exp__names__noun} and {Tg_calc__names__noun} for the polymer with the {compound_name__names__noun} {compound_name#}. Answer:<EOI> {Tg_exp#} {Tg_exp__units}, {Tg_calc#} {Tg_calc__units}.
-  - What is the {rho_300K_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#} at 300K? Answer:<EOI> {rho_300K_calc#} {rho_300K_calc__units}.
-  - What is the {rho_300K_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#} at 300K? Answer:<EOI> {rho_300K_calc#} {rho_300K_calc__units}.
+  - Compare the {Tg_exp__names__noun} and {Tg_calc__names__noun} for the polymer with the {PSMILES__description} {PSMILES#}. Answer:<EOI>{Tg_exp#} {Tg_exp__units}, {Tg_calc#} {Tg_calc__units}.
+  - Compare the {Tg_exp__names__noun} and {Tg_calc__names__noun} for the polymer with the {compound_name__names__noun} {compound_name#}. Answer:<EOI>{Tg_exp#} {Tg_exp__units}, {Tg_calc#} {Tg_calc__units}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {PSMILES__description} {PSMILES#} at 300K? Answer:<EOI>{rho_300K_calc#} {rho_300K_calc__units}.
+  - What is the {rho_300K_calc__names__noun} of the polymer with the {compound_name__names__noun} {compound_name#} at 300K? Answer:<EOI>{rho_300K_calc#} {rho_300K_calc__units}.
   - |-
     Task: Please answer the multiple choice question.
 
@@ -71,7 +84,7 @@ templates:
 
     {Tg_exp#}
 
-    Answer:<EOI> {%multiple_choice_result}
+    Answer:<EOI>{%multiple_choice_result}
   - |-
     Task: Please answer the multiple choice question.
 
@@ -84,7 +97,7 @@ templates:
 
     {Tg_calc#}
 
-    Answer:<EOI> {%multiple_choice_result}
+    Answer:<EOI>{%multiple_choice_result}
   - |-
     Task: Please answer the multiple choice question.
 
@@ -98,7 +111,7 @@ templates:
 
     {rho_300K_calc#}
 
-    Answer:<EOI> {%multiple_choice_result}
+    Answer:<EOI>{%multiple_choice_result}
   - |-
     Task: Please answer the multiple choice question.
 
@@ -110,7 +123,7 @@ templates:
 
     {Tg_exp#}
 
-    Answer:<EOI> {%multiple_choice_result}
+    Answer:<EOI>{%multiple_choice_result}
   - |-
     Task: Please answer the multiple choice question.
 
@@ -123,4 +136,4 @@ templates:
 
     {Tg_calc#}
 
-    Answer:<EOI> {%multiple_choice_result}
+    Answer:<EOI>{%multiple_choice_result}
