--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,54 +7,35 @@ name = "chemnlp"
 description = "Open source chemistry dataset & LLM"
 readme = "README.md"
 requires-python = "==3.9.*"
-dependencies = [
-  "pandas",
-  "pydantic"
-]
+dependencies = ["pandas", "pydantic", "pydantic_yaml<=0.11.2", "fire", "loguru"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = [
-  "black[jupyter]>=22.1.0",
-  "fire",
-  "flake8>=3.8.3",
-  "isort>=5.0.0",
-  "pre-commit",
-  "pydantic_yaml<=0.11.2",
-  "pytest",
-  "pubchempy"
-]
+dev = ["pre-commit", "pytest"]
 dataset_creation = [
-  "PyTDC",
-  "rdkit",
-  "ruamel.yaml",
-  "selfies",
-  "deepsmiles",
-  "pubchempy",
-  "bioc",
-  "pylatexenc",
-  "canonicalize_psmiles@git+https://github.com/Ramprasad-Group/canonicalize_psmiles.git",
-  "rxn-chem-utils",
-  # "safe-mol",
-  "backoff",
-  "givemeconformer",
-  "chembl_webresource_client",
-  "dask",
-  "pandarallel"
+    "PyTDC",
+    "rdkit",
+    "ruamel.yaml",
+    "selfies",
+    "deepsmiles",
+    "pubchempy",
+    "bioc",
+    "pylatexenc",
+    "canonicalize_psmiles@git+https://github.com/Ramprasad-Group/canonicalize_psmiles.git",
+    "rxn-chem-utils",
+    "backoff",
+    "givemeconformer",
+    "chembl_webresource_client",
+    "dask",
+    "pandarallel",
 ]
-training = [
-  "deepspeed>=0.8.2", # https://github.com/microsoft/DeepSpeed/pull/2863
-  "nvidia-ml-py3",
-  "protobuf<3.20",
-  "s3fs",
-  "boto3<=1.26.90" # https://github.com/boto/boto3/issues/3648
-]
-tokenisation = [
-  "zstandard",
-  "apache_beam",
-  "mwparserfromhell",
-  "jsonlines"
-]
+
+
+[project.scripts]
+chemnlp-generate-meta = "chemnlp.data.meta_yaml_generator:cli"
+chemnlp-augment-meta = "chemnlp.data.meta_yaml_augmenter:cli"
+chemnlp-sample = "chemnlp.data.sampler_cli:cli"
+
 
 [tool.setuptools_scm]
 version_scheme = "post-release"
