--- a/data/tabular/bicerano_dataset/meta.yaml
+++ b/data/tabular/bicerano_dataset/meta.yaml
@@ -1,19 +1,6 @@
 bibtex:
-  - "@article{afzal2021,
-    author = {Afzal, Mohammad Atif Faiz and Browning, Andrea R. and Goldberg, Alexander
-    and Halls, Mathew D. and Gavartin, Jacob L. and Morisato,
-    Tsuguo and Hughes, Thomas F. and Giesen, David J. and Goose, Joseph E.},
-    title = {High-Throughput Molecular Dynamics Simulations and Validation of Thermophysical
-    Properties of Polymers for Various Applications},
-    journal = {ACS Applied Polymer Materials},
-    volume = {3},
-    number = {2},
-    pages = {620-630},
-    year = {2021},
-    doi = {10.1021/acsapm.0c00524}}"
-description:
-  "This paper outlines a MD simulation workflow based on GPU MD simulation
-  and the refined optimized potentials for liquid simulation (OPLS) OPLS3e force field to calculate glass transition temperatures (Tgs) of 315 polymers for which Bicerano reported experimental values."
+  - "@article{afzal2021, author = {Afzal, Mohammad Atif Faiz and Browning, Andrea R. and Goldberg, Alexander and Halls, Mathew D. and Gavartin, Jacob L. and Morisato, Tsuguo and Hughes, Thomas F. and Giesen, David J. and Goose, Joseph E.}, title = {High-Throughput Molecular Dynamics Simulations and Validation of Thermophysical Properties of Polymers for Various Applications}, journal = {ACS Applied Polymer Materials}, volume = {3}, number = {2}, pages = {620-630}, year = {2021}, doi = {10.1021/acsapm.0c00524}}"
+description: "This paper outlines a MD simulation workflow based on GPU MD simulation and the refined optimized potentials for liquid simulation (OPLS) OPLS3e force field to calculate glass transition temperatures (Tgs) of 315 polymers for which Bicerano reported experimental values."
 identifiers:
   - description: PSMILES
     id: PSMILES
@@ -81,8 +68,7 @@ templates:
     Constraint: You must pick one of {%multiple_choice_enum%3%aA1}.
 
     Options:
-
-    {Tg_exp#}
+    {Tg_exp%}
 
     Answer:<EOI>{%multiple_choice_result}
   - |-
@@ -94,8 +80,7 @@ templates:
     Constraint: You must pick one of {%multiple_choice_enum%3%aA1}.
 
     Options:
-
-    {Tg_calc#}
+    {Tg_calc%}
 
     Answer:<EOI>{%multiple_choice_result}
   - |-
@@ -106,10 +91,7 @@ templates:
     Constraint: You must pick one of {%multiple_choice_enum%3%aA1}.
 
     Options:
-
-    {%multiple_choice_enum%3%aA1}
-
-    {rho_300K_calc#}
+    {rho_300K_calc%}
 
     Answer:<EOI>{%multiple_choice_result}
   - |-
@@ -120,8 +102,7 @@ templates:
     Constraint: You must pick one of {%multiple_choice_enum%3%aA1}.
 
     Options:
-
-    {Tg_exp#}
+    {Tg_exp%}
 
     Answer:<EOI>{%multiple_choice_result}
   - |-
@@ -133,7 +114,6 @@ templates:
     Constraint: You must pick one of {%multiple_choice_enum%3%aA1}.
 
     Options:
-
-    {Tg_calc#}
+    {Tg_calc%}
 
     Answer:<EOI>{%multiple_choice_result}
